# BandejAI

./: .env.example  .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements-experimental.txt  requirements.txt
core_math/homography/: calibration_ui.py  projector.py
examples/: README.md  api_tracking_example.py  demo_homography.py  demo_scene_detection.py  demo_tracking_2d.py
tests/: test_projector.py
tools/: compare_videos.py
vision/: pipeline.py  visualization.py
vision/action_recognition/: pose_extractor.py  tube_extractor.py  tube_processor.py
vision/ball_tracking/: smoother.py  tracker.py  tracknet.py
vision/player_tracking/: __init__.py  merger.py  smoother.py  tracker.py
vision/scene_detection/: __init__.py  rally_extractor.py
